# Sygna-y

./: Projekt3.sln  README.md  script.py
Projekt3/: .gitignore  CMakeLists.txt  Projekt3.vcxproj  Projekt3.vcxproj.filters  binding.cpp  environment.yml  main.cpp  projekt3.h  script.py  vcpkg.json
src/: binding.cpp  main.cpp  projekt3.h
